--- a/css/styles.css
+++ b/css/styles.css
@@ -3985,6 +3985,8 @@ textarea.form-control-lg {
   .navbar-expand-lg .navbar-collapse {
     display: flex !important;
     flex-basis: auto;
+    justify-content: flex-end;
+    flex-wrap: nowrap;
   }
   .navbar-expand-lg .navbar-toggler {
     display: none;
@@ -11260,9 +11262,9 @@ form {
   display: block;
 }
 
-.collapsed {
+/* .collapsed {
   display: none;
-}
+} */
 
 .constom_container{
 
@@ -11286,12 +11288,9 @@ form {
   object-fit: cover; /* Garante que a imagem cubra todo o espaço da tela */
   z-index: 1; /* Garante que a imagem fique abaixo do navbar */
   top: 0px;
-  padding: 1vw; 
-  background-image: url(/assets/assets_img/banner-site.jpg);
-  background-repeat: round;
-}
-.Flexbox-Between {
-  justify-content: space-between;
+  padding: 1vw;
+  /* background-image: url(/assets/assets_img/banner-site.jpg); */
+  /* background-repeat: round; */
 }
 
 /* Modificação de layouts */
@@ -11307,7 +11306,7 @@ form {
   background-color: #090db7;
   color: white;
   border: none;
-  padding: 10px 20px;
+  padding: 5px 10px;
   cursor: pointer;
   border: 2px solid transparent;
   border-radius: 32px;
