--- a/css/style_itemPage.css
+++ b/css/style_itemPage.css
@@ -22,7 +22,8 @@
     text-align: center;
 }
 .add-to-cart-btn {
-    background-color: #ffcc00;
+    background-color: #1B2D51;
+    color: #ffffff;
     border: none;
     padding: 7px 14px;
     cursor: pointer;
@@ -31,7 +32,7 @@
     transition: background-color 0.3s ease; /* Suaviza a transição de cor */
 }
 .add-to-cart-btn:hover {
-    background-color: #e6b800; /* Cor diferente ao passar o mouse */
+    background-color: #dc3545 /* Cor diferente ao passar o mouse */
 }
 
 
