--- a/css/style_itemPage.css
+++ b/css/style_itemPage.css
@@ -10,7 +10,7 @@
     font-size: 32px;
     font-weight: bold;
     margin: 10px 0;
-    display: flex;
+    /* display: flex; Impede que o R$ quebre, ficando em cima do valor */
 }
 .product-quantity {
     display: flex;
@@ -22,8 +22,8 @@
     text-align: center;
 }
 .add-to-cart-btn {
-    background-color: #1B2D51;
-    color: #ffffff;
+    background-color: #152B74;
+    color: #FFFFFF;
     border: none;
     padding: 7px 14px;
     cursor: pointer;
@@ -32,16 +32,14 @@
     transition: background-color 0.3s ease; /* Suaviza a transição de cor */
 }
 .add-to-cart-btn:hover {
-    background-color: #dc3545 /* Cor diferente ao passar o mouse */
+    background-color: #152B74; /* Cor diferente ao passar o mouse */
 }
-
-
 .quantity-label-item{
     margin: 0;
     margin-right: 1em;
 }
 .product-description {
-    margin-top: 20px;
+    margin-top: -20px;/* Deixa o hover da imagem nos cards, mais centralizado! */
 }
 .product-actions {
     display: flex;
