--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,9 @@
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
   --card-bord:#090DB7;
+
+  /* ICON */
+  --icon-Trash: '\F5DD';
 }
 
 *,
@@ -90,6 +93,11 @@
   :root {
     scroll-behavior: smooth;
   }
+}
+
+/* MESSAGE-ALERTS */
+.container-mensagens {
+  z-index: 1;
 }
 
 body {
@@ -645,8 +653,25 @@ progress {
   margin-right: auto;
   margin-left: auto;
 }
-
-@media (min-width: 576px) {
+@media (max-width: 768px) {
+  #itensProdutos {
+    padding-right: 7.8vw;
+    padding-left: 7.8vw;
+  }
+}
+@media (max-width: 576px) {
+  #itensProdutos {
+    padding-right: 7rem;
+    padding-left: 7rem;
+  }
+}
+@media (max-width: 472px) {
+  #itensProdutos {
+    padding-right: 9.8vw;
+    padding-left: 9.8vw;
+  }
+}
+@media (min-width: 577px) {
   .container-sm, .container {
     max-width: 540px;
   }
@@ -705,7 +730,7 @@ progress {
 
 .row-cols-2 > * {
   flex: 0 0 auto;
-  width: 50%;
+  /* width: 50%; */
 }
 
 .row-cols-3 > * {
@@ -3164,9 +3189,9 @@ textarea.form-control-lg {
     transition: none;
   }
 }
-.fade:not(.show) {
+/* .fade:not(.show) {
   opacity: 0;
-}
+} */
 
 .collapse:not(.show) {
   display: none;
@@ -3985,8 +4010,6 @@ textarea.form-control-lg {
   .navbar-expand-lg .navbar-collapse {
     display: flex !important;
     flex-basis: auto;
-    justify-content: flex-end;
-    flex-wrap: nowrap;
   }
   .navbar-expand-lg .navbar-toggler {
     display: none;
@@ -4662,7 +4685,7 @@ textarea.form-control-lg {
   font-size: var(--bs-badge-font-size);
   font-weight: var(--bs-badge-font-weight);
   line-height: 1;
-  color: var(--bs-danger);
+  color: var(--bs-badge-color);
   text-align: center;
   white-space: nowrap;
   vertical-align: baseline;
@@ -10937,6 +10960,7 @@ textarea.form-control-lg {
 .custom-card-content {
     flex: 1 1 auto;
     padding: 1rem;
+    padding: 10px;
 }
 
 .card-cart-control{
@@ -10954,14 +10978,15 @@ textarea.form-control-lg {
   align-items: center;
   justify-content: space-between;
   width: 150px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  /* border: 1px solid #ccc; */
+  background-color: #f8f9fa;
+  border-radius: 5px 0;
   padding: 5px;
 }
 
 .btn-cart-control {
   cursor: pointer;
-  background-color: #1B2D51;
+  background-color: #152B74;
   color: #fff;
   border: none;
   border-radius: 3px;
@@ -10969,7 +10994,7 @@ textarea.form-control-lg {
 }
 
 .btn-cart-control:hover {
-  background-color: #dc3545;
+  background-color: #152B74;
 }
 
 .quantity-label {
@@ -11128,12 +11153,15 @@ form {
   background-color: rgba(127, 241, 138, 0.88);
 }
 
+/* ALERTA DE ITEM ADICIONADO AO CARRINHO */
 .animated {
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
+  z-index: 1;
 }
+
 
 @keyframes fadeInDown {
   from {
@@ -11262,9 +11290,9 @@ form {
   display: block;
 }
 
-/* .collapsed {
+.collapsed {
   display: none;
-} */
+}
 
 .constom_container{
 
@@ -11288,9 +11316,22 @@ form {
   object-fit: cover; /* Garante que a imagem cubra todo o espaço da tela */
   z-index: 1; /* Garante que a imagem fique abaixo do navbar */
   top: 0px;
-  padding: 1vw;
+  padding: 1vw; 
+  background-color: #F3F3F3;
   /* background-image: url(/assets/assets_img/banner-site.jpg); */
-  /* background-repeat: round; */
+  background-repeat: round;
+}
+@media (max-width: 417px) {
+  .px-5{
+    padding-right: 2rem !important;
+    padding-left: 2rem !important;
+  }
+  .fullscreen-image {
+    text-align: center;
+  }
+}
+.Flexbox-Between {
+  justify-content: space-between;
 }
 
 /* Modificação de layouts */
@@ -11303,10 +11344,10 @@ form {
 }
 .custom-button {
   text-decoration: none;
-  background-color: var(--bs-danger);
+  background-color: #090db7;
   color: white;
   border: none;
-  padding: 5px 10px;
+  padding: 10px 20px;
   cursor: pointer;
   border: 2px solid transparent;
   border-radius: 32px;
@@ -11315,8 +11356,8 @@ form {
 }
 
 .custom-button:hover {
-  color: var(--bs-gray-800);
-  border-color: var(--bs-gray-800);
+  color: #090db7;
+  border-color: #090db7;
   background-color: white;
 }
 
@@ -11332,7 +11373,7 @@ form {
 
 .badge {
   background-color: white;
-  color: var(--bs-gray-800);
+  color: #090db7;
   border-radius: 10px;
   font-size: 0.9em;
 }
@@ -11420,12 +11461,12 @@ form {
   display: none; /* Inicialmente escondido */
   position: fixed;
   /* top: 250px; */
-  bottom: 150px;
+  bottom: 50px;
   /* right: 20px; */
   right: 20px;
   width: 50px;
   height: 50px;
-  background-color: var(--bs-danger);
+  background-color: #d31212;
   border: none;
   border-radius: 50%;
   cursor: pointer;
@@ -11437,7 +11478,7 @@ form {
 }
 
 .float-button:hover {
-  background-color: var(--bs-danger);
+  background-color: #fa6602;
 }
 
 .feedback-busca-no-items p {
@@ -11462,285 +11503,292 @@ form {
 
 * {box-sizing: border-box;}
 body {font-family: Verdana, sans-serif;}
-.mySlides {display: none;}
-img {vertical-align: middle;}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
   .text {font-size: 11px}
 }
+/* -------------------------------------- */
+/* IMAGE-HOVER(Pag.index.html & item.html */
+/* -------------------------------------- */
+/* Efeito de transição das letras (hover) */
+figure.effect-milo img {
+  width: -webkit-calc(100% + 100px);
+  width: calc(100% + 100px);
+  opacity: 1;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+/* Opacidade no hover dos cards (hover) */
+figure.effect-milo:hover img {
+  opacity: 0.5;
+  -webkit-transform: translate3d(0,0,0) scale(1);
+  transform: translate3d(0,0,0) scale(1);
+}
 
-#presentation{
-  width: 480px;
-  height: 120px;
-  padding: 20px;
+figure.effect-milo figcaption {
+  margin-top: 30px !important;
+  width: 100%;	
+  font-style: italic;
+  border-left: 2px solid #fff;
+  text-align: left;
+  opacity: 0;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(0,-40px,0);
+  transform: translate3d(0.-40px,0);
+}
+
+figure.effect-milo:hover figcaption {
+  opacity: 1;
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
+
+/* widht image */
+.grid figure {
+  z-index: 1;
+  display: inline-block;
+  overflow: hidden;
+  margin: 0;
+  width: 100%;
+  height: 180px;
+  background: #0f1c27;
+  text-align: center;
+  cursor: pointer;
+}
+
+.grid figure img {
+  position: relative;
+  display: block;
+  min-height: 100%;
+  opacity: 1;
+}
+
+.grid figure figcaption {
+  padding: 2em;
+  color: #fff;
+  font-size: 1.25em;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.grid figure figcaption::before,
+.grid figure figcaption::after {
+  pointer-events: none;
+}
+
+.grid figure figcaption,
+.grid figure a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  /* width: 100%;
+  height: 100%; */
+}
+.grid figure h2,
+.grid figure figcaption {
+  margin: 0;
+}
+
+.grid figure figcaption {
+  letter-spacing: 1px;
+  font-size: 68.5%;
+}
+/* Responsive - ongoing work */
+@media screen and (max-width: 500px) {
+  h2 {font-size: 20px;}
+  figure.effect-milo .position {
+    position: absolute;
+    font-size: 14px;
+    left: 0;
+    top: 0;
+  }
+}
+
+/*PEN STYLES*/
+.blog-card {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem auto;
+  box-shadow: 0 3px 7px -1px rgba(0, 0, 0, .1);
+  margin-bottom: 1.6%;
+  background: #fff;
+  line-height: 1.4;
+  font-family: sans-serif;
+  border-radius: 5px;
+  overflow: hidden;
+  z-index: 0;
+}
+.blog-card a {
+  color: inherit;
+}
+.blog-card a:hover {
+  color: #5ad67d;
+}
+.blog-card .meta {
+  position: relative;
+  z-index: 0;
+  height: 200px;
+}
+.blog-card .photo {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-size: cover;
+  background-position: center;
+  transition: transform 0.2s;
+}
+.blog-card .details, .blog-card .details ul {
   margin: auto;
-  background: #FFF;
-  margin-top: 10px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23); 
-  transition: all 0.3s; 
+  padding: 0;
+  list-style: none;
+}
+.blog-card .details {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: -100%;
+  margin: auto;
+  transition: left 0.2s;
+  background: rgba(0, 0, 0, .6);
+  color: #fff;
+  padding: 10px;
+  width: 100%;
+  font-size: 0.9rem;
+}
+.blog-card .details a {
+  text-decoration: dotted underline;
+}
+.blog-card .details ul li {
+  display: inline-block;
+}
+.blog-card .details .author:before {
+  font-family: FontAwesome;
+  margin-right: 10px;
+  content: "\f007";
+}
+.blog-card .details .date:before {
+  font-family: FontAwesome;
+  margin-right: 10px;
+  content: "\f133";
+}
+.blog-card .details .tags ul:before {
+  font-family: FontAwesome;
+  content: "\f02b";
+  margin-right: 10px;
+}
+.blog-card .details .tags li {
+  margin-right: 2px;
+}
+.blog-card .details .tags li:first-child {
+  margin-left: -4px;
+}
+.blog-card .description {
+  padding: 1rem;
+  background: #fff;
+  position: relative;
+  z-index: 1;
+}
+.blog-card .description h1, .blog-card .description h2 {
+  font-family: Poppins, sans-serif;
+}
+.blog-card .description h1 {
+  line-height: 1;
+  margin: 0;
+  font-size: 1.7rem;
+}
+.blog-card .description h2 {
+  font-size: 1rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  color: #a2a2a2;
+  margin-top: 5px;
+}
+.blog-card .description .read-more {
+  text-align: right;
+}
+.blog-card .description .read-more a {
+  color: var(--bs-danger);
+  display: inline-block;
+  position: relative;
+}
+.blog-card .description .read-more a:hover {
+  color: #fff;
+}
+/* Define a variável para o código Unicode */
+/* :root {
+  --icon-trash: '\f1f8'; 
+}
+
+.blog-card .description .read-more a::after {
+  content: '\f1f8';
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 900;
+  margin-left: -10px;
+  opacity: 0;
+  vertical-align: middle;
+  transition: margin 0.3s, opacity 0.3s;
+} */
+/* .blog-card .description .read-more a:hover:after {
+  margin-left: 5px;
+  opacity: 1;
+} */
+.blog-card p {
+  position: relative;
+  margin: 1rem 0 0;
+}
+.blog-card p:first-of-type {
+  margin-top: 1.25rem;
+}
+.blog-card p:first-of-type:before {
+  content: "";
+  position: absolute;
+  height: 5px;
+  background: #5ad67d;
+  width: 35px;
+  top: -0.75rem;
   border-radius: 3px;
 }
-
-#presentation:hover{
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  transition: all 0.3s;
-  transform: translateZ(10px);
+.blog-card:hover .details {
+  left: 0%;
 }
-
-#floating-button{
-  width: 55px;
-  height: 55px;
-  border-radius: 50%;
-  background: #00009A ;
-  position: fixed;
-  bottom: 15px;
-  right: 15px;
-  cursor: pointer;
-  box-shadow: 0px 2px 5px #666;
-}
-
-.plus{
-  color: white;
-  position: absolute;
-  top: 0;
-  display: block;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  text-align: center;
-  padding: 0;
-  margin: 0;
-  line-height: 55px;
-  font-size: 38px;
-  font-family: 'Roboto';
-  font-weight: 300;
-  animation: plus-out 0.3s;
-  transition: all 0.3s;
-}
-
-#container-floating{
-  position: fixed;
-  width: 50px;
-  height: 50px;
-  bottom: 30px;
-  right: 30px;
-  z-index: 50;
-
-}
-
-#container-floating:hover{
-  height: 400px;
-  width: 90px;
-  padding: 30px;
-}
-
-#container-floating:hover .plus{
-  animation: plus-in 0.15s linear;
-  animation-fill-mode: forwards;
-}
-
-.edit{
-  position: absolute;
-  top: 0;
-  display: block;
-  bottom: 0;
-  left: 0;
-  display: block;
-  right: 0;
-  padding: 0;
-  opacity: 0;
-  margin: auto;
-  line-height: 65px;
-  transform: rotateZ(-70deg);
-  transition: all 0.3s;
-  animation: edit-out 0.3s;
-}
-
-#container-floating:hover .edit{
-  animation: edit-in 0.2s;
-   animation-delay: 0.1s;
-  animation-fill-mode: forwards;
-}
-
-@keyframes edit-in{
-    from {opacity: 0; transform: rotateZ(-70deg);}
-    to {opacity: 1; transform: rotateZ(0deg);}
-}
-
-@keyframes edit-out{
-    from {opacity: 1; transform: rotateZ(0deg);}
-    to {opacity: 0; transform: rotateZ(-70deg);}
-}
-
-@keyframes plus-in{
-    from {opacity: 1; transform: rotateZ(0deg);}
-    to {opacity: 0; transform: rotateZ(180deg);}
-}
-
-@keyframes plus-out{
-    from {opacity: 0; transform: rotateZ(180deg);}
-    to {opacity: 1; transform: rotateZ(0deg);}
-}
-
-.nds{
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  position: fixed;
-  z-index: 300;
-  transform:  scale(0);
-  cursor: pointer;
-}
-.nd2{
-  background: #009900 ;
-  right: 25px;
-  bottom: 120px;
-  animation-delay: 0.2s;
-    animation: bounce-out-nds 0.3s linear;
-  animation-fill-mode:  forwards;
-}
-
-.nd3{
-  /*background: #3c80f6;*/
-  background: var(--bs-link-hover-color);
-  right: 25px;
-  bottom: 180px;
-  animation-delay: 0.15s;
-    animation: bounce-out-nds 0.15s linear;
-  animation-fill-mode:  forwards;
-}
-
-.nd4{
-  background: #CC0066 ;
-  right: 25px;
-  bottom: 240px;
-  animation-delay: 0.1s;
-    animation: bounce-out-nds 0.1s linear;
-  animation-fill-mode:  forwards;
-}
-
-.nd5{
-  background-image: url('');
-  background-size: 100%;
-  right: 25px;
-  bottom: 300px;
-  animation-delay: 0.08s;
-  animation: bounce-out-nds 0.1s linear;
-  animation-fill-mode:  forwards;
-}
-
-@keyframes bounce-nds{
-    from {opacity: 0;}
-    to {opacity: 1; transform: scale(1);}
-}
-
-@keyframes bounce-out-nds{
-    from {opacity: 1; transform: scale(1);}
-    to {opacity: 0; transform: scale(0);}
-}
-
-#container-floating:hover .nds{
-  
-  animation: bounce-nds 0.1s linear;
-  animation-fill-mode:  forwards;
-}
-
-#container-floating:hover .nd3{
-  animation-delay: 0.08s;
-}
-#container-floating:hover .nd4{
-  animation-delay: 0.15s;
-}
-#container-floating:hover .nd5{
-  animation-delay: 0.2s;
-}
-
-.letter{
-  font-size: 23px;
-  font-family: 'Roboto';
-  color: white;
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin: 0;
-  top: 0;
-  bottom: 0;
-  text-align: center;
-  line-height: 40px;
-}
-
-.reminder{
-  filter: grayscale(100%);
-  height: 50%;
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin: auto;
-  top: 0;
-  bottom: 0;
-  line-height: 40px;
-}
-
-.profile{
-  border-radius: 50%;
-  width: 40px;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  right: 20px;
+@media (min-width: 640px) {
+  .overflow-auto .blog-card {
+    flex-direction: row;
+    max-width: 700px;
+ }
+  .blog-card .meta {
+    flex-basis: 40%;
+    height: auto;
+ }
+  .blog-card .description {
+    flex-basis: 60%;
+ }
+  .blog-card .description:before {
+    transform: skewX(-3deg);
+    content: "";
+    background: #fff;
+    width: 30px;
+    position: absolute;
+    left: -10px;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+ }
+  .blog-card.alt {
+    flex-direction: row-reverse;
+ }
+  .blog-card.alt .description:before {
+    left: inherit;
+    right: -10px;
+    transform: skew(3deg);
+ }
+  .blog-card.alt .details {
+    padding-left: 25px;
+ }
 }
